# cloud-collapse

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py  simulate.py  visualize.py
cloud_collapse/: initial_conditions.py  params.py  paths.py
cloud_collapse/io/: trajectory_store.py
cloud_collapse/physics/: collisions.py  diagnostics.py  gravity.py  integrate.py
configs/: accrete.toml  example.toml
src/: run.py  simulate.py  visualize.py
