[project]
name = "cloud-collapse"
version = "0.1.0"
description = "Simulation illustrating gravitational collapse of a 3D particle cloud into a 2D rotating disk"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "numba>=0.61",
    "pyvista>=0.44",
    "zarr>=3.2",
    "matplotlib>=3.8",
    "cyclopts>=3.0",
    "rich>=13.0",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloud_collapse"]
